guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: guestbook
  namespace: guestbook
spec:
  ingressClassName: nginx
  rules:
    # k get service ingress-nginx-controller -n ingress-nginx
  - host: guestbook.20.123.110.27.nip.io
    http:
      paths:
      - backend:
          service:
            name: guestbook
            port:
              number: 3000
        path: /(.*)
        pathType: Exact
